# CATE-ROS-Project

./: .gitignore  README.MD  index.md
code_test/: CMakeLists.txt  package.xml
code_test/src/: add_two_ints_client.cpp
code_test_python/: package.xml
code_test_python/src/: add_two_ints_client.py  talker.py
devel/: .catkin
husky_customization/husky_custom_description/urdf/: custom_description.urdf.xacro
husky_customization/husky_custom_gazebo/urdf/: custom_description.gazebo.xacro
move/: CMakeLists.txt  package.xml
move/src/: main.py  movement.py  test.py  vision.py
simulation/: .gitattributes  package.xml
simulation/launch/: cpp.launch
simulation/worlds/: cpp.world
src/code_test/src/: add_two_ints_server.cpp
src/code_test_python/: CMakeLists.txt
src/code_test_python/src/: add_two_ints_server.py
src/codetest/: CMakeLists.txt  package.xml
src/move/: CMakeLists.txt
src/move/src/: test.py
src/simulation/launch/: cpp.launch
src/simulation/worlds/: cpp.world
src/test/: package.xml
vision/: CMakeLists.txt
vision/src/: image_train.py  road.py  vision_main.py
